# CompoundFs

./: .clang-format  .gitignore  .hgignore  CMakeLists.txt  CompoundFs.sln  CompountFs.sln  FileLockingProtocol.md  LICENSE  README.md
.github/workflows/: CI_Windows.yml  Win32.yml  cmake.yml  linux.yml  min-linux.yml  osx.yml  win32.yml  win64.yml  windows.yml
CompoundFs/: BTree.cpp  BTree.h  Blob.h  BlobTransformation.cpp  BlobTransformation.h  Board.txt  ByteString.h  CMakeLists.txt  Cache.h  CacheManager.cpp  CacheManager.h  CommitBlock.cpp  CommitBlock.h  CommitHandler.cpp  CommitHandler.h  Composit.cpp  Composit.h  Composite.cpp  Composite.h  CompoundFs.vcxproj  CompoundFs.vcxproj.filters  DirectoryObjects.cpp  DirectoryObjects.h  DirectoryStructure.cpp  DirectoryStructure.h  File.cpp  File.h  FileDescriptor.h  FileInterface.h  FileIo.cpp  FileIo.h  FileLockLinux.cpp  FileLockLinux.h  FileLockPosition.h  FileLockWindows.cpp  FileLockWindows.h  FileReader.h  FileSharedMutex.cpp  FileSharedMutex.h  FileSystem.cpp  (+53 more)
CompountFs/: BTree.h  CompountFs.vcxproj  CompountFs.vcxproj.filters  InMemoryIoManager.cpp  InMemoryIoManager.h  IoManagerInterface.h  Test.h  main.cpp
PythonBindings/: Bindings.cpp  CMakeLists.txt
Rfx/: Blob.h  CMakeLists.txt  CompressedInteger.h  FixupTable.h  PushBits.h  Rfx.natvis  Stream.h  StreamRule.h  TypeUtils.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  main.cpp
TestDriver/: BTree.cpp  BTree.h  Blob.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  DiskFileTester.h  File.h  FileDescriptor.h  FileInterfaceTester.h  FileLockingTester.h  FileSystemHelper.h  FileSystemUtility.h  FileTable.h  FreeStore.h  InnerNode.h  Interval.h  IntervalSequence.h  LRUCache.h  Leaf.h  MinimalTreeBuilder.h  Node.h  PageAllocator.cpp  PageAllocator.h  PageManager.cpp  PageManager.h  SimpleFile.h  Test.h  TestBTree.cpp  TestBlobTransformation.cpp  TestByteString.cpp  TestCacheManager.cpp  TestCommitHandler.cpp  TestComposit.cpp  TestComposite.cpp  TestDirectoryObjects.cpp  TestDirectoryStructure.cpp  TestDriver.cpp  TestDriver.vcxproj  TestDriver.vcxproj.filters  (+31 more)
TestRfx/: CMakeLists.txt  RandomGen.h  TestBlob.cpp  TestCompressedInteger.cpp  TestFixupTable.cpp  TestPushBits.cpp  TestRandomGen.cpp  TestStream.cpp  TestStreamRule.cpp  TestTypeUtils.cpp  TestVersionedStructs.cpp  VersionedStructs.h
py_txfs/: Bindings.cpp  CMakeLists.txt
